# langchain-widget

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  development.rst  index.rst  installation.rst  quick_start.ipynb  widget_settings.rst
examples/: example.ipynb
js/: widget.css  widget.jsx
src/langchain_widget/: __init__.py  history.py  testing.py  tools.py  widget.py
src/langchain_widget/runtime/: __init__.py  base.py  langchain_runtime.py
tests/: test_widget.py
