[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain_widget"
version = "0.0.1"
description = "A widget to run  in Jupyter Notebook."
authors = [{name = "Xing Wang", email = "xingwang1991@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}

dependencies = ["anywidget", "langchain-core>=0.3.0"]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]
openai = ["langchain-openai>=0.3.0"]
anthropic = ["langchain-anthropic>=0.3.0"]
pre-commit = [
    "pre-commit~=2.2",
    "pylint~=2.17.4",
]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/langchain_widget/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/langchain_widget/static/widget.js"]
skip-if-exists = ["src/langchain_widget/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
